CvmCompiler/MyParser/src/main/java/io/github/r1mao/parser/ClikeParser.java
// Generated from C:/Users/rimao/Desktop/MyParser/src/main/java\Clike.g4 by ANTLR 4.9.1
package io.github.r1mao.parser;
import org.antlr.v4.runtime.atn.*;
import org.antlr.v4.runtime.dfa.DFA;
import org.antlr.v4.runtime.*;
import org.antlr.v4.runtime.misc.*;
import org.antlr.v4.runtime.tree.*;
import java.util.List;
import java.util.Iterator;
import java.util.ArrayList;

@SuppressWarnings({"all", "warnings", "unchecked", "unused", "cast"})
public class ClikeParser extends Parser {
	static { RuntimeMetaData.checkVersion("4.9.1", RuntimeMetaData.VERSION); }

	protected static final DFA[] _decisionToDFA;
	protected static final PredictionContextCache _sharedContextCache =
		new PredictionContextCache();
	public static final int
		T__0=1, T__1=2, T__2=3, T__3=4, T__4=5, T__5=6, T__6=7, T__7=8, T__8=9, 
		T__9=10, T__10=11, T__11=12, T__12=13, T__13=14, T__14=15, T__15=16, T__16=17, 
		T__17=18, T__18=19, T__19=20, T__20=21, T__21=22, T__22=23, T__23=24, 
		T__24=25, T__25=26, T__26=27, T__27=28, T__28=29, T__29=30, T__30=31, 
		T__31=32, T__32=33, T__33=34, T__34=35, T__35=36, T__36=37, T__37=38, 
		T__38=39, T__39=40, T__40=41, T__41=42, T__42=43, T__43=44, T__44=45, 
		T__45=46, T__46=47, T__47=48, T__48=49, T__49=50, T__50=51, T__51=52, 
		T__52=53, ESC=54, ID=55, NUM=56, WS=57;
	public static final int
		RULE_module = 0, RULE_moduleDefine = 1, RULE_defineTypes = 2, RULE_returnTypes = 3, 
		RULE_varDefine = 4, RULE_arrDefine = 5, RULE_atomDefine = 6, RULE_varInitializer = 7, 
		RULE_arrInitializer = 8, RULE_strInitializer = 9, RULE_functionDefine = 10, 
		RULE_globalDefine = 11, RULE_stmt = 12, RULE_stmtBlock = 13, RULE_defineStmt = 14, 
		RULE_assignStmt = 15, RULE_whileStmt = 16, RULE_forStmt = 17, RULE_forInit = 18, 
		RULE_forUpdate = 19, RULE_callStmt = 20, RULE_ifStmt = 21, RULE_continueStmt = 22, 
		RULE_breakStmt = 23, RULE_returnStmt = 24, RULE_condition = 25, RULE_atomCondition = 26, 
		RULE_expr = 27, RULE_callExpr = 28, RULE_callArgs = 29, RULE_varValue = 30, 
		RULE_constValue = 31, RULE_arrValue = 32, RULE_symbolValue = 33, RULE_value = 34, 
		RULE_function = 35, RULE_vm = 36, RULE_vmCall = 37, RULE_var = 38, RULE_number = 39, 
		RULE_string = 40;
	private static String[] makeRuleNames() {
		return new String[] {
			"module", "moduleDefine", "defineTypes", "returnTypes", "varDefine", 
			"arrDefine", "atomDefine", "varInitializer", "arrInitializer", "strInitializer", 
			"functionDefine", "globalDefine", "stmt", "stmtBlock", "defineStmt", 
			"assignStmt", "whileStmt", "forStmt", "forInit", "forUpdate", "callStmt", 
			"ifStmt", "continueStmt", "breakStmt", "returnStmt", "condition", "atomCondition", 
			"expr", "callExpr", "callArgs", "varValue", "constValue", "arrValue", 
			"symbolValue", "value", "function", "vm", "vmCall", "var", "number", 
			"string"
		};
	}
	public static final String[] ruleNames = makeRuleNames();

	private static String[] makeLiteralNames() {
		return new String[] {
			null, "'unsigned'", "'char'", "'short'", "'int'", "'long'", "'void'", 
			"'['", "']'", "'='", "'{'", "','", "'}'", "'\"'", "'('", "')'", "';'", 
			"'+='", "'-='", "'*='", "'/='", "'&='", "'|='", "'^='", "'<<='", "'>>='", 
			"'while'", "'for'", "'if'", "'else'", "'continue'", "'break'", "'return'", 
			"'&&'", "'||'", "'!'", "'=='", "'!='", "'>='", "'<='", "'>'", "'<'", 
			"'-'", "'~'", "'*'", "'/'", "'%'", "'+'", "'|'", "'&'", "'^'", "'>>'", 
			"'<<'", "'.'"
		};
	}
	private static final String[] _LITERAL_NAMES = makeLiteralNames();
	private static String[] makeSymbolicNames() {
		return new String[] {
			null, null, null, null, null, null, null, null, null, null, null, null, 
			null, null, null, null, null, null, null, null, null, null, null, null, 
			null, null, null, null, null, null, null, null, null, null, null, null, 
			null, null, null, null, null, null, null, null, null, null, null, null, 
			null, null, null, null, null, null, "ESC", "ID", "NUM", "WS"
		};
	}
	private static final String[] _SYMBOLIC_NAMES = makeSymbolicNames();
	public static final Vocabulary VOCABULARY = new VocabularyImpl(_LITERAL_NAMES, _SYMBOLIC_NAMES);

	/**
	 * @deprecated Use {@link #VOCABULARY} instead.
	 */
	@Deprecated
	public static final String[] tokenNames;
	static {
		tokenNames = new String[_SYMBOLIC_NAMES.length];
		for (int i = 0; i < tokenNames.length; i++) {
			tokenNames[i] = VOCABULARY.getLiteralName(i);
			if (tokenNames[i] == null) {
				tokenNames[i] = VOCABULARY.getSymbolicName(i);
			}

			if (tokenNames[i] == null) {
				tokenNames[i] = "<INVALID>";
			}
		}
	}

	@Override
	@Deprecated
	public String[] getTokenNames() {
		return tokenNames;
	}

	@Override

	public Vocabulary getVocabulary() {
		return VOCABULARY;
	}

	@Override
	public String getGrammarFileName() { return "Clike.g4"; }

	@Override
	public String[] getRuleNames() { return ruleNames; }

	@Override
	public String getSerializedATN() { return _serializedATN; }

	@Override
	public ATN getATN() { return _ATN; }

	public ClikeParser(TokenStream input) {
		super(input);
		_interp = new ParserATNSimulator(this,_ATN,_decisionToDFA,_sharedContextCache);
	}

	public static class ModuleContext extends ParserRuleContext {
		public List<ModuleDefineContext> moduleDefine() {
			return getRuleContexts(ModuleDefineContext.class);
		}
		public ModuleDefineContext moduleDefine(int i) {
			return getRuleContext(ModuleDefineContext.class,i);
		}
		public ModuleContext(ParserRuleContext parent, int invokingState) {
			super(parent, invokingState);
		}
		@Override public int getRuleIndex() { return RULE_module; }
		@Override
		public void enterRule(ParseTreeListener listener) {
			if ( listener instanceof ClikeListener ) ((ClikeListener)listener).enterModule(this);
		}
		@Override
		public void exitRule(ParseTreeListener listener) {
			if ( listener instanceof ClikeListener ) ((ClikeListener)listener).exitModule(this);
		}
		@Override
		public <T> T accept(ParseTreeVisitor<? extends T> visitor) {
			if ( visitor instanceof ClikeVisitor ) return ((ClikeVisitor<? extends T>)visitor).visitModule(this);
			else return visitor.visitChildren(this);
		}
	}

	public final ModuleContext module() throws RecognitionException {
		ModuleContext _localctx = new ModuleContext(_ctx, getState());
		enterRule(_localctx, 0, RULE_module);
		int _la;
		try {
			enterOuterAlt(_localctx, 1);
			{
			setState(85);
			_errHandler.sync(this);
			_la = _input.LA(1);
			while ((((_la) & ~0x3f) == 0 && ((1L << _la) & ((1L << T__0) | (1L << T__1) | (1L << T__2) | (1L << T__3) | (1L << T__4) | (1L << T__5))) != 0)) {
				{
				{
				setState(82);
				moduleDefine();
				}
				}
				setState(87);
				_errHandler.sync(this);
				_la = _input.LA(1);
			}
			}
		}
		catch (RecognitionException re) {
			_localctx.exception = re;
			_errHandler.reportError(this, re);
			_errHandler.recover(this, re);
		}
		finally {
			exitRule();
		}
		return _localctx;
	}

	public static class ModuleDefineContext extends ParserRuleContext {
		public GlobalDefineContext globalDefine() {
			return getRuleContext(GlobalDefineContext.class,0);
		}
		public FunctionDefineContext functionDefine() {
			return getRuleContext(FunctionDefineContext.class,0);
		}
		public ModuleDefineContext(ParserRuleContext parent, int invokingState) {
			super(parent, invokingState);
		}
		@Override public int getRuleIndex() { return RULE_moduleDefine; }
		@Override
		public void enterRule(ParseTreeListener listener) {
			if ( listener instanceof ClikeListener ) ((ClikeListener)listener).enterModuleDefine(this);
		}
		@Override
		public void exitRule(ParseTreeListener listener) {
			if ( listener instanceof ClikeListener ) ((ClikeListener)listener).exitModuleDefine(this);
		}
		@Override
		public <T> T accept(ParseTreeVisitor<? extends T> visitor) {
			if ( visitor instanceof ClikeVisitor ) return ((ClikeVisitor<? extends T>)visitor).visitModuleDefine(this);
			else return visitor.visitChildren(this);
		}
	}

	public final ModuleDefineContext moduleDefine() throws RecognitionException {
		ModuleDefineContext _localctx = new ModuleDefineContext(_ctx, getState());
		enterRule(_localctx, 2, RULE_moduleDefine);
		try {
			setState(90);
			_errHandler.sync(this);
			switch ( getInterpreter().adaptivePredict(_input,1,_ctx) ) {
			case 1:
				enterOuterAlt(_localctx, 1);
				{
				setState(88);
				globalDefine();
				}
				break;
			case 2:
				enterOuterAlt(_localctx, 2);
				{
				setState(89);
				functionDefine();
				}
				break;
			}
		}
		catch (RecognitionException re) {
			_localctx.exception = re;
			_errHandler.reportError(this, re);
			_errHandler.recover(this, re);
		}
		finally {
			exitRule();
		}
		return _localctx;
	}

	public static class DefineTypesContext extends ParserRuleContext {
		public DefineTypesContext(ParserRuleContext parent, int invokingState) {
			super(parent, invokingState);
		}
		@Override public int getRuleIndex() { return RULE_defineTypes; }
		@Override
		public void enterRule(ParseTreeListener listener) {
			if ( listener instanceof ClikeListener ) ((ClikeListener)listener).enterDefineTypes(this);
		}
		@Override
		public void exitRule(ParseTreeListener listener) {
			if ( listener instanceof ClikeListener ) ((ClikeListener)listener).exitDefineTypes(this);
		}
		@Override
		public <T> T accept(ParseTreeVisitor<? extends T> visitor) {
			if ( visitor instanceof ClikeVisitor ) return ((ClikeVisitor<? extends T>)visitor).visitDefineTypes(this);
			else return visitor.visitChildren(this);
		}
	}

	public final DefineTypesContext defineTypes() throws RecognitionException {
		DefineTypesContext _localctx = new DefineTypesContext(_ctx, getState());
		enterRule(_localctx, 4, RULE_defineTypes);
		int _la;
		try {
			enterOuterAlt(_localctx, 1);
			{
			setState(94);
			_errHandler.sync(this);
			switch (_input.LA(1)) {
			case T__0:
				{
				setState(92);
				match(T__0);
				}
				break;
			case T__1:
			case T__2:
			case T__3:
			case T__4:
				{
				}
				break;
			default:
				throw new NoViableAltException(this);
			}
			setState(96);
			_la = _input.LA(1);
			if ( !((((_la) & ~0x3f) == 0 && ((1L << _la) & ((1L << T__1) | (1L << T__2) | (1L << T__3) | (1L << T__4))) != 0)) ) {
			_errHandler.recoverInline(this);
			}
			else {
				if ( _input.LA(1)==Token.EOF ) matchedEOF = true;
				_errHandler.reportMatch(this);
				consume();
			}
			}
		}
		catch (RecognitionException re) {
			_localctx.exception = re;
			_errHandler.reportError(this, re);
			_errHandler.recover(this, re);
		}
		finally {
			exitRule();
		}
		return _localctx;
	}

	public static class ReturnTypesContext extends ParserRuleContext {
		public DefineTypesContext defineTypes() {
			return getRuleContext(DefineTypesContext.class,0);
		}
		public ReturnTypesContext(ParserRuleContext parent, int invokingState) {
			super(parent, invokingState);
		}
		@Override public int getRuleIndex() { return RULE_returnTypes; }
		@Override
		public void enterRule(ParseTreeListener listener) {
			if ( listener instanceof ClikeListener ) ((ClikeListener)listener).enterReturnTypes(this);
		}
		@Override
		public void exitRule(ParseTreeListener listener) {
			if ( listener instanceof ClikeListener ) ((ClikeListener)listener).exitReturnTypes(this);
		}
		@Override
		public <T> T accept(ParseTreeVisitor<? extends T> visitor) {
			if ( visitor instanceof ClikeVisitor ) return ((ClikeVisitor<? extends T>)visitor).visitReturnTypes(this);
			else return visitor.visitChildren(this);
		}
	}

	public final ReturnTypesContext returnTypes() throws RecognitionException {
		ReturnTypesContext _localctx = new ReturnTypesContext(_ctx, getState());
		enterRule(_localctx, 6, RULE_returnTypes);
		try {
			setState(100);
			_errHandler.sync(this);
			switch (_input.LA(1)) {
			case T__0:
			case T__1:
			case T__2:
			case T__3:
			case T__4:
				enterOuterAlt(_localctx, 1);
				{
				setState(98);
				defineTypes();
				}
				break;
			case T__5:
				enterOuterAlt(_localctx, 2);
				{
				setState(99);
				match(T__5);
				}
				break;
			default:
				throw new NoViableAltException(this);
			}
		}
		catch (RecognitionException re) {
			_localctx.exception = re;
			_errHandler.reportError(this, re);
			_errHandler.recover(this, re);
		}
		finally {
			exitRule();
		}
		return _localctx;
	}

	public static class VarDefineContext extends ParserRuleContext {
		public VarContext var() {
			return getRuleContext(VarContext.class,0);
		}
		public VarInitializerContext varInitializer() {
			return getRuleContext(VarInitializerContext.class,0);
		}
		public VarDefineContext(ParserRuleContext parent, int invokingState) {
			super(parent, invokingState);
		}
		@Override public int getRuleIndex() { return RULE_varDefine; }
		@Override
		public void enterRule(ParseTreeListener listener) {
			if ( listener instanceof ClikeListener ) ((ClikeListener)listener).enterVarDefine(this);
		}
		@Override
		public void exitRule(ParseTreeListener listener) {
			if ( listener instanceof ClikeListener ) ((ClikeListener)listener).exitVarDefine(this);
		}
		@Override
		public <T> T accept(ParseTreeVisitor<? extends T> visitor) {
			if ( visitor instanceof ClikeVisitor ) return ((ClikeVisitor<? extends T>)visitor).visitVarDefine(this);
			else return visitor.visitChildren(this);
		}
	}

	public final VarDefineContext varDefine() throws RecognitionException {
		VarDefineContext _localctx = new VarDefineContext(_ctx, getState());
		enterRule(_localctx, 8, RULE_varDefine);
		try {
			enterOuterAlt(_localctx, 1);
			{
			setState(102);
			var();
			setState(105);
			_errHandler.sync(this);
			switch (_input.LA(1)) {
			case T__8:
				{
				setState(103);
				varInitializer();
				}
				break;
			case T__10:
			case T__14:
			case T__15:
				{
				}
				break;
			default:
				throw new NoViableAltException(this);
			}
			}
		}
		catch (RecognitionException re) {
			_localctx.exception = re;
			_errHandler.reportError(this, re);
			_errHandler.recover(this, re);
		}
		finally {
			exitRule();
		}
		return _localctx;
	}

	public static class ArrDefineContext extends ParserRuleContext {
		public VarContext var() {
			return getRuleContext(VarContext.class,0);
		}
		public ConstValueContext constValue() {
			return getRuleContext(ConstValueContext.class,0);
		}
		public ArrInitializerContext arrInitializer() {
			return getRuleContext(ArrInitializerContext.class,0);
		}
		public ArrDefineContext(ParserRuleContext parent, int invokingState) {
			super(parent, invokingState);
		}
		@Override public int getRuleIndex() { return RULE_arrDefine; }
		@Override
		public void enterRule(ParseTreeListener listener) {
			if ( listener instanceof ClikeListener ) ((ClikeListener)listener).enterArrDefine(this);
		}
		@Override
		public void exitRule(ParseTreeListener listener) {
			if ( listener instanceof ClikeListener ) ((ClikeListener)listener).exitArrDefine(this);
		}
		@Override
		public <T> T accept(ParseTreeVisitor<? extends T> visitor) {
			if ( visitor instanceof ClikeVisitor ) return ((ClikeVisitor<? extends T>)visitor).visitArrDefine(this);
			else return visitor.visitChildren(this);
		}
	}

	public final ArrDefineContext arrDefine() throws RecognitionException {
		ArrDefineContext _localctx = new ArrDefineContext(_ctx, getState());
		enterRule(_localctx, 10, RULE_arrDefine);
		try {
			enterOuterAlt(_localctx, 1);
			{
			setState(107);
			var();
			setState(108);
			match(T__6);
			setState(111);
			_errHandler.sync(this);
			switch (_input.LA(1)) {
			case NUM:
				{
				setState(109);
				constValue();
				}
				break;
			case T__7:
				{
				}
				break;
			default:
				throw new NoViableAltException(this);
			}
			setState(113);
			match(T__7);
			setState(116);
			_errHandler.sync(this);
			switch (_input.LA(1)) {
			case T__8:
				{
				setState(114);
				arrInitializer();
				}
				break;
			case T__10:
			case T__14:
			case T__15:
				{
				}
				break;
			default:
				throw new NoViableAltException(this);
			}
			}
		}
		catch (RecognitionException re) {
			_localctx.exception = re;
			_errHandler.reportError(this, re);
			_errHandler.recover(this, re);
		}
		finally {
			exitRule();
		}
		return _localctx;
	}

	public static class AtomDefineContext extends ParserRuleContext {
		public ArrDefineContext arrDefine() {
			return getRuleContext(ArrDefineContext.class,0);
		}
		public VarDefineContext varDefine() {
			return getRuleContext(VarDefineContext.class,0);
		}
		public AtomDefineContext(ParserRuleContext parent, int invokingState) {
			super(parent, invokingState);
		}
		@Override public int getRuleIndex() { return RULE_atomDefine; }
		@Override
		public void enterRule(ParseTreeListener listener) {
			if ( listener instanceof ClikeListener ) ((ClikeListener)listener).enterAtomDefine(this);
		}
		@Override
		public void exitRule(ParseTreeListener listener) {
			if ( listener instanceof ClikeListener ) ((ClikeListener)listener).exitAtomDefine(this);
		}
		@Override
		public <T> T accept(ParseTreeVisitor<? extends T> visitor) {
			if ( visitor instanceof ClikeVisitor ) return ((ClikeVisitor<? extends T>)visitor).visitAtomDefine(this);
			else return visitor.visitChildren(this);
		}
	}

	public final AtomDefineContext atomDefine() throws RecognitionException {
		AtomDefineContext _localctx = new AtomDefineContext(_ctx, getState());
		enterRule(_localctx, 12, RULE_atomDefine);
		try {
			setState(120);
			_errHandler.sync(this);
			switch ( getInterpreter().adaptivePredict(_input,7,_ctx) ) {
			case 1:
				enterOuterAlt(_localctx, 1);
				{
				setState(118);
				arrDefine();
				}
				break;
			case 2:
				enterOuterAlt(_localctx, 2);
				{
				setState(119);
				varDefine();
				}
				break;
			}
		}
		catch (RecognitionException re) {
			_localctx.exception = re;
			_errHandler.reportError(this, re);
			_errHandler.recover(this, re);
		}
		finally {
			exitRule();
		}
		return _localctx;
	}

	public static class VarInitializerContext extends ParserRuleContext {
		public ExprContext expr() {
			return getRuleContext(ExprContext.class,0);
		}
		public VarInitializerContext(ParserRuleContext parent, int invokingState) {
			super(parent, invokingState);
		}
		@Override public int getRuleIndex() { return RULE_varInitializer; }
		@Override
		public void enterRule(ParseTreeListener listener) {
			if ( listener instanceof ClikeListener ) ((ClikeListener)listener).enterVarInitializer(this);
		}
		@Override
		public void exitRule(ParseTreeListener listener) {
			if ( listener instanceof ClikeListener ) ((ClikeListener)listener).exitVarInitializer(this);
		}
		@Override
		public <T> T accept(ParseTreeVisitor<? extends T> visitor) {
			if ( visitor instanceof ClikeVisitor ) return ((ClikeVisitor<? extends T>)visitor).visitVarInitializer(this);
			else return visitor.visitChildren(this);
		}
	}

	public final VarInitializerContext varInitializer() throws RecognitionException {
		VarInitializerContext _localctx = new VarInitializerContext(_ctx, getState());
		enterRule(_localctx, 14, RULE_varInitializer);
		try {
			enterOuterAlt(_localctx, 1);
			{
			setState(122);
			match(T__8);
			setState(123);
			expr(0);
			}
		}
		catch (RecognitionException re) {
			_localctx.exception = re;
			_errHandler.reportError(this, re);
			_errHandler.recover(this, re);
		}
		finally {
			exitRule();
		}
		return _localctx;
	}

	public static class ArrInitializerContext extends ParserRuleContext {
		public List<ExprContext> expr() {
			return getRuleContexts(ExprContext.class);
		}
		public ExprContext expr(int i) {
			return getRuleContext(ExprContext.class,i);
		}
		public ArrInitializerContext(ParserRuleContext parent, int invokingState) {
			super(parent, invokingState);
		}
		@Override public int getRuleIndex() { return RULE_arrInitializer; }
		@Override
		public void enterRule(ParseTreeListener listener) {
			if ( listener instanceof ClikeListener ) ((ClikeListener)listener).enterArrInitializer(this);
		}
		@Override
		public void exitRule(ParseTreeListener listener) {
			if ( listener instanceof ClikeListener ) ((ClikeListener)listener).exitArrInitializer(this);
		}
		@Override
		public <T> T accept(ParseTreeVisitor<? extends T> visitor) {
			if ( visitor instanceof ClikeVisitor ) return ((ClikeVisitor<? extends T>)visitor).visitArrInitializer(this);
			else return visitor.visitChildren(this);
		}
	}

	public final ArrInitializerContext arrInitializer() throws RecognitionException {
		ArrInitializerContext _localctx = new ArrInitializerContext(_ctx, getState());
		enterRule(_localctx, 16, RULE_arrInitializer);
		try {
			int _alt;
			enterOuterAlt(_localctx, 1);
			{
			setState(125);
			match(T__8);
			setState(126);
			match(T__9);
			setState(132);
			_errHandler.sync(this);
			_alt = getInterpreter().adaptivePredict(_input,8,_ctx);
			while ( _alt!=2 && _alt!=org.antlr.v4.runtime.atn.ATN.INVALID_ALT_NUMBER ) {
				if ( _alt==1 ) {
					{
					{
					setState(127);
					expr(0);
					setState(128);
					match(T__10);
					}
					} 
				}
				setState(134);
				_errHandler.sync(this);
				_alt = getInterpreter().adaptivePredict(_input,8,_ctx);
			}
			setState(135);
			expr(0);
			setState(136);
			match(T__11);
			}
		}
		catch (RecognitionException re) {
			_localctx.exception = re;
			_errHandler.reportError(this, re);
			_errHandler.recover(this, re);
		}
		finally {
			exitRule();
		}
		return _localctx;
	}

	public static class StrInitializerContext extends ParserRuleContext {
		public StringContext string() {
			return getRuleContext(StringContext.class,0);
		}
		public StrInitializerContext(ParserRuleContext parent, int invokingState) {
			super(parent, invokingState);
		}
		@Override public int getRuleIndex() { return RULE_strInitializer; }
		@Override
		public void enterRule(ParseTreeListener listener) {
			if ( listener instanceof ClikeListener ) ((ClikeListener)listener).enterStrInitializer(this);
		}
		@Override
		public void exitRule(ParseTreeListener listener) {
			if ( listener instanceof ClikeListener ) ((ClikeListener)listener).exitStrInitializer(this);
		}
		@Override
		public <T> T accept(ParseTreeVisitor<? extends T> visitor) {
			if ( visitor instanceof ClikeVisitor ) return ((ClikeVisitor<? extends T>)visitor).visitStrInitializer(this);
			else return visitor.visitChildren(this);
		}
	}

	public final StrInitializerContext strInitializer() throws RecognitionException {
		StrInitializerContext _localctx = new StrInitializerContext(_ctx, getState());
		enterRule(_localctx, 18, RULE_strInitializer);
		try {
			enterOuterAlt(_localctx, 1);
			{
			setState(138);
			match(T__8);
			setState(139);
			match(T__12);
			setState(140);
			string();
			setState(141);
			match(T__12);
			}
		}
		catch (RecognitionException re) {
			_localctx.exception = re;
			_errHandler.reportError(this, re);
			_errHandler.recover(this, re);
		}
		finally {
			exitRule();
		}
		return _localctx;
	}

	public static class FunctionDefineContext extends ParserRuleContext {
		public ReturnTypesContext returnTypes() {
			return getRuleContext(ReturnTypesContext.class,0);
		}
		public FunctionContext function() {
			return getRuleContext(FunctionContext.class,0);
		}
		public StmtBlockContext stmtBlock() {
			return getRuleContext(StmtBlockContext.class,0);
		}
		public List<DefineTypesContext> defineTypes() {
			return getRuleContexts(DefineTypesContext.class);
		}
		public DefineTypesContext defineTypes(int i) {
			return getRuleContext(DefineTypesContext.class,i);
		}
		public List<AtomDefineContext> atomDefine() {
			return getRuleContexts(AtomDefineContext.class);
		}
		public AtomDefineContext atomDefine(int i) {
			return getRuleContext(AtomDefineContext.class,i);
		}
		public FunctionDefineContext(ParserRuleContext parent, int invokingState) {
			super(parent, invokingState);
		}
		@Override public int getRuleIndex() { return RULE_functionDefine; }
		@Override
		public void enterRule(ParseTreeListener listener) {
			if ( listener instanceof ClikeListener ) ((ClikeListener)listener).enterFunctionDefine(this);
		}
		@Override
		public void exitRule(ParseTreeListener listener) {
			if ( listener instanceof ClikeListener ) ((ClikeListener)listener).exitFunctionDefine(this);
		}
		@Override
		public <T> T accept(ParseTreeVisitor<? extends T> visitor) {
			if ( visitor instanceof ClikeVisitor ) return ((ClikeVisitor<? extends T>)visitor).visitFunctionDefine(this);
			else return visitor.visitChildren(this);
		}
	}

	public final FunctionDefineContext functionDefine() throws RecognitionException {
		FunctionDefineContext _localctx = new FunctionDefineContext(_ctx, getState());
		enterRule(_localctx, 20, RULE_functionDefine);
		try {
			int _alt;
			enterOuterAlt(_localctx, 1);
			{
			setState(143);
			returnTypes();
			setState(144);
			function();
			setState(145);
			match(T__13);
			setState(159);
			_errHandler.sync(this);
			switch (_input.LA(1)) {
			case T__0:
			case T__1:
			case T__2:
			case T__3:
			case T__4:
				{
				{
				setState(152);
				_errHandler.sync(this);
				_alt = getInterpreter().adaptivePredict(_input,9,_ctx);
				while ( _alt!=2 && _alt!=org.antlr.v4.runtime.atn.ATN.INVALID_ALT_NUMBER ) {
					if ( _alt==1 ) {
						{
						{
						setState(146);
						defineTypes();
						setState(147);
						atomDefine();
						setState(148);
						match(T__10);
						}
						} 
					}
					setState(154);
					_errHandler.sync(this);
					_alt = getInterpreter().adaptivePredict(_input,9,_ctx);
				}
				setState(155);
				defineTypes();
				setState(156);
				atomDefine();
				}
				}
				break;
			case T__14:
				{
				}
				break;
			default:
				throw new NoViableAltException(this);
			}
			setState(161);
			match(T__14);
			setState(162);
			stmtBlock();
			}
		}
		catch (RecognitionException re) {
			_localctx.exception = re;
			_errHandler.reportError(this, re);
			_errHandler.recover(this, re);
		}
		finally {
			exitRule();
		}
		return _localctx;
	}

	public static class GlobalDefineContext extends ParserRuleContext {
		public DefineTypesContext defineTypes() {
			return getRuleContext(DefineTypesContext.class,0);
		}
		public List<AtomDefineContext> atomDefine() {
			return getRuleContexts(AtomDefineContext.class);
		}
		public AtomDefineContext atomDefine(int i) {
			return getRuleContext(AtomDefineContext.class,i);
		}
		public GlobalDefineContext(ParserRuleContext parent, int invokingState) {
			super(parent, invokingState);
		}
		@Override public int getRuleIndex() { return RULE_globalDefine; }
		@Override
		public void enterRule(ParseTreeListener listener) {
			if ( listener instanceof ClikeListener ) ((ClikeListener)listener).enterGlobalDefine(this);
		}
		@Override
		public void exitRule(ParseTreeListener listener) {
			if ( listener instanceof ClikeListener ) ((ClikeListener)listener).exitGlobalDefine(this);
		}
		@Override
		public <T> T accept(ParseTreeVisitor<? extends T> visitor) {
			if ( visitor instanceof ClikeVisitor ) return ((ClikeVisitor<? extends T>)visitor).visitGlobalDefine(this);
			else return visitor.visitChildren(this);
		}
	}

	public final GlobalDefineContext globalDefine() throws RecognitionException {
		GlobalDefineContext _localctx = new GlobalDefineContext(_ctx, getState());
		enterRule(_localctx, 22, RULE_globalDefine);
		try {
			int _alt;
			enterOuterAlt(_localctx, 1);
			{
			setState(164);
			defineTypes();
			setState(170);
			_errHandler.sync(this);
			_alt = getInterpreter().adaptivePredict(_input,11,_ctx);
			while ( _alt!=2 && _alt!=org.antlr.v4.runtime.atn.ATN.INVALID_ALT_NUMBER ) {
				if ( _alt==1 ) {
					{
					{
					setState(165);
					atomDefine();
					setState(166);
					match(T__10);
					}
					} 
				}
				setState(172);
				_errHandler.sync(this);
				_alt = getInterpreter().adaptivePredict(_input,11,_ctx);
			}
			setState(173);
			atomDefine();
			setState(174);
			match(T__15);
			}
		}
		catch (RecognitionException re) {
			_localctx.exception = re;
			_errHandler.reportError(this, re);
			_errHandler.recover(this, re);
		}
		finally {
			exitRule();
		}
		return _localctx;
	}
